@@ -2,7 +2,7 @@
   :activerecord => {
     :errors => {
       :messages => {
-        :invalid_transition => StateMachine::Machine.default_invalid_message % ['{{event}}', '{{value}}']
+        :invalid_transition => StateMachine::Machine.default_messages[:invalid_transition] % ['{{event}}']
       }
     }
   }
